2006-01-05  Paul Eggert  <eggert@cs.ucla.edu>

	Fix Posix-conformance bugs re use of { command in sed scripts,
	and improve the sed-related documentation a bit.
	* doc/autoconf.texi (Installation Directory Variables): Use
	our own style advice re 's,a,b,' versus 's|a|b|'.  Use "Sed"
	rather than "sed" when talking about Sed in general.
	(Particular Programs): Likewise.
	(Coding Style): y is like s with respect to / and ,.
	(Limitations of Usual Tools): Document the weird restrictions
	that Posix has about { }.  Use better quoting.
	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES_PREPARE, _AC_OUTPUT_HEADER):
	Rewrite to conform to Posix rules about { } in sed scripts.
	* lib/m4sugar/m4sh.m4 (AS_DIRNAME_SED, AS_BASENAME_SED): Likewise.
	* tests/foreign.at (Libtool): Likewise.
	* tests/semantics.at (AC_CHECK_PROG & AC_CHECK_PROGS):
	Use our own style advice re 's,a,b,' versus 's|a|b|'.

2006-01-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/status.m4: Fix typo.

	* lib/autoconf/fortran.m4 (_AC_FC_LIBRARY_LDFLAGS): Ignore
	singly- or doubly-quoted arguments to `-cmdline', `-ignore',
	`-def', for the benefit of Portland `pgf90 -Mipa'.
	Reported by Christopher Hulbert <cchgroupmail@gmail.com>.

2006-01-04  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi: Update copyright (and other) dates to 2006.
	* doc/autoconf.texi (Shellology): Mac OS X 10.2 changed the default
	shell from zsh to bash.

2005-12-31  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/programs.m4 (_AC_PROG_GREP): Use $PATH_SEPARATOR;
	  ":" caused problems on OS/2-EMX.  Suggested by Andrew Belov.

2005-12-29  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Shell Substitutions): Warn about unbalanced
	parentheses in $(...).  Problem reported by Eric Blake.

2005-12-12  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Limitations of Usual Tools):
	Mention which characters can be escaped with \ in portable regular