@@ -389,7 +389,7 @@ m4_if(_AC_Var, [ac_delim],
 [dnl Just to be on the safe side, claim that $ac_delim is the empty string.
 m4_define([_AC_SED_FRAG],
 m4_defn([_AC_SED_FRAG])dnl
-[s,ac_delim,|#_!!_#|,g
+[s/ac_delim/|#_!!_#|/g
 ])dnl
 m4_define([_AC_SED_CMD_NUM], m4_incr(_AC_SED_CMD_NUM))],
       _AC_Var, [@END@],
@@ -1435,16 +1435,16 @@ m4_define([AC_OUTPUT_MAKE_DEFS],
 cat >confdef2opt.sed <<\_ACEOF
 t clear
 :clear
-s,^[	 ]*#[	 ]*define[	 ][	 ]*\([^	 (][^	 (]*([^)]*)\)[	 ]*\(.*\),-D\1=\2,g
+s/^[	 ]*#[	 ]*define[	 ][	 ]*\([^	 (][^	 (]*([^)]*)\)[	 ]*\(.*\)/-D\1=\2/g
 t quote
-s,^[	 ]*#[	 ]*define[	 ][	 ]*\([^	 ][^	 ]*\)[	 ]*\(.*\),-D\1=\2,g
+s/^[	 ]*#[	 ]*define[	 ][	 ]*\([^	 ][^	 ]*\)[	 ]*\(.*\)/-D\1=\2/g
 t quote
 d
 :quote
-s,[	 `~#$^&*(){}\\|;'"<>?],\\&,g
-s,\[,\\&,g
-s,\],\\&,g
-s,\$,$$,g
+s/[	 `~#$^&*(){}\\|;'"<>?]/\\&/g
+s/\[/\\&/g
+s/\]/\\&/g
+s/\$/$$/g
 p
 _ACEOF
 # We use echo to avoid assuming a particular line-breaking character.
