@@ -1,5 +1,16 @@
 2006-01-05  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* Makefile.maint (sc_root_tests): Use recommend style s/a/b/ for
+	sed substitutions.
+	* doc/autoconf.texi (Installation Directory Variables): Use s|a|b|
+	for file names, again.  Reported by Noah Misch.
+	(Coding Style): Explain that s|a|b| is preferred for file names.
+	* lib/autoconf/status.m4 (_AC_OUTPUT_FILES_PREPARE): Prefer s/a/b/.
+	(AC_OUTPUT_MAKE_DEFS): Likewise.
+	* lib/autotest/general.m4 (AT_INIT): Likewise.
+	* lib/m4sugar/m4sh.m4 (_AS_LINENO_PREPARE): Likewise.
+	* tests/local.at (AT_CHECK_AUTOM4TE): Likewise.
+
 	Fix Posix-conformance bugs re use of { command in sed scripts,
 	and improve the sed-related documentation a bit.
 	* doc/autoconf.texi (Installation Directory Variables): Use
